@@ -1,3 +1,3 @@
 # Makefile.am for bin/
 
-SUBDIRS = adv1tov2 aecho afile afppasswd getzones megatron nbp pap psorder
+SUBDIRS = adv1tov2 aecho afile afppasswd cnid getzones megatron nbp pap psorder
