@@ -1,0 +1,8 @@
+# Makefile.am for bin/cnid/
+
+CFLAGS = @CFLAGS@ @DB3_CFLAGS@
+LIBS = @LIBS@ @DB3_LIBS@
+
+bin_PROGRAMS = cnid_didname_verify
+
+cnid_SOURCES = cnid_didname_verify.c
